(executable
 (public_name kind2)
 (libraries kind2dev)
 (modules kind2)
 (flags (:standard
         -noautolink
         -cclib -Wl,-Bstatic
         
         -cclib -lzmq_stubs 
         -cclib -lzmq 
         -cclib -lnorm
         -cclib -lprotolib
         -cclib -lpgm 
        
         -cclib -lsodium  
         -cclib -lstdint_stubs 
         -cclib -lthreadsnat          
         -cclib -lunix 
         -cclib -lcamlstr  
         -cclib -lnums 
         -cclib -Wl,-Bdynamic
         -cclib -lpthread  
         -cclib -lstdc++
         -cclib -lgssapi_krb5
         
                  
 ))
 (link_flags (:include %{env:link_flags=dune.default_lflags}))
)

(library
 (name kind2dev)
 (libraries dune-build-info num str threads yojson zmq menhirLib)
 (modules
  (:standard \ horn kind2 lustreChecker nusmv oldParser testgen testgenLib
    testgenStrategies))
 (modules_without_implementation solverSig)
 (wrapped false))

(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w A-4-9-29-40-41-42-44-48-67))))
